--- a/client/src/styles/_minmaxselect.scss
+++ b/client/src/styles/_minmaxselect.scss
@@ -52,5 +52,6 @@
   }
   .button.is-primary {
     align-self: center;
+    letter-spacing: 0.02em;
   }
 }
