--- a/client/src/styles/_multiselect.scss
+++ b/client/src/styles/_multiselect.scss
@@ -165,6 +165,7 @@
   }
   .button.is-primary {
     align-self: center;
+    letter-spacing: 0.02em;
   }
 }
 
